--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
+@import url("https://fonts.googleapis.com/css?family=Lato:300");
 body {
+  background-color: #dedeff;
+  font-family: "Lato", sans-serif;
+  overflow-y: scroll;
   margin: 0;
-  padding: 0;
-  font-family: sans-serif;
 }
