--- a/src/components/form/SubmitButton.css
+++ b/src/components/form/SubmitButton.css
@@ -15,6 +15,11 @@
   border: solid 2px #8e8eff;
 }
 
+.SubmitButton:disabled {
+  border: solid 2px #c1c1ff;
+  color: #c1c1ff;
+}
+
 .SubmitButton:active {
   background-color: #d4d4ff;
 }
