--- a/src/components/shared/IconButton.css
+++ b/src/components/shared/IconButton.css
@@ -7,6 +7,12 @@
   cursor: pointer;
 }
 
-.IconButton.active, .IconButton:hover, .IconButton:focus {
+.IconButton:active, .IconButton:focus {
   color: #57446c;
+}
+
+@media not all and (hover: none) {
+  .IconButton:hover {
+    color: #57446c;
+  }
 }
