--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -11,6 +11,7 @@
   border: solid 1px #c1c1ff;
   border-radius: 6px;
   transition: border 0.3s;
+  font-size: 16px;
 }
 
 .Form input:not([type]):focus, .Form input[type="text"]:focus, .Form input[type="email"]:focus, .Form input[type="password"]:focus {
